fix(chat-ui): align messages left or right based on author

--- a/src/app/features/workspace/components/thread-sidenav-content/thread-sidenav-content.scss
+++ b/src/app/features/workspace/components/thread-sidenav-content/thread-sidenav-content.scss
@@ -126,3 +126,16 @@
     );
   }
 }
+
+.trigger-message-container {
+  width: 100%;
+  padding-left: 24px;
+  box-sizing: border-box;
+  margin-bottom: 20px;
+}
+
+.reaction-messages-box {
+  width: 100%;
+  padding-left: 24px;
+  box-sizing: border-box;
+}
