--- a/src/app/layouts/workspace-layout-component/workspace-layout-component.scss
+++ b/src/app/layouts/workspace-layout-component/workspace-layout-component.scss
@@ -30,6 +30,7 @@
 .thread-sidenav {
   background-color: #ffffff;
   border-radius: 30px !important;
+  width: 450px;
 }
 
 .thread-sidenav-button {
