--- a/src/app/shared/components/message-bubble-component/message-bubble.component.scss
+++ b/src/app/shared/components/message-bubble-component/message-bubble.component.scss
@@ -9,7 +9,6 @@
   gap: 20px;
   width: 100%;
   max-width: 100%;
-  padding: 0 45px;
   box-sizing: border-box;
   margin-bottom: 20px;
 }
